# Mini-ide-simulator-v2

./: .gitignore  CMakeLists.txt  README.md  SUPPORTED_OPERATIONS.md  demo_full.cpp  test_parse.cpp  test_quick.cpp  test_tmpl.cpp  讲稿.md
src/: ast.h  codeeditor.cpp  codeeditor.h  executor.cpp  executor.h  lexer.cpp  lexer.h  main.cpp  mainwindow.cpp  mainwindow.h  memoryview.cpp  memoryview.h  parser.cpp  parser.h  snapshot.cpp  snapshot.h  variant_value.h
